Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.1.1.6
----------------------------------------------------------------------
- Improve shortcode logic to not show duplicate login forms in rare, theme-specific cases
- Fix bug that caused missing expiration date for admin-assigned memberships
- Fix a rare error 'float expected but string found' in billings module
- Fix minor issue with wrong filter parameter 

1.1.1.5
----------------------------------------------------------------------
- Add "autofocus" attribute to login shortcode
- Add filter "ms_model_pages_redirect_to" to customize membership redirects
- Add new attributes to the login shortcode to customize field labels and placeholders
- Improve the Import Tool to handle large import files without throwing memory limit exceptions
- Improve preview of the [ms-protected-content] shortcode for admins
- Fix various small issues with the login shortcode HTML code
- Fix javascript collision with ACF Pro plugin
- Fix display of invoice status in the admin Billings section

1.1.1.4
----------------------------------------------------------------------
- Added new automatic email notification: Subscription Renewed
- Improved descriptions of automatic email notification settings
- Improved i18n integration in the Billings module, Invoice display and in the Account page
- Improved the invoice and subscription workflow with Trial Memberships
- Improved media protection to protect whole HTML output instead of post-content only
- Improved Mailchimp integration: Firstname/Lastname are now also transfered to Mailchimp
- Improved lots of front-end pages by adding new CSS classes that can be used to customize the layout
- Fixed XSS vulnerability (add_query_arg/remove_query_arg) 
- Fixed bug with Stripe gateway that striped the cent amount from the charged amount